# obs-studio-ftl

./: .gitignore  .gitmodules  build
UI/: window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
build_script/: build.bash  build.bat  build_app.py  build_osx  deb_post_install  deb_post_remove  make_deb.bash  make_rpm.bash  osx_README.txt  rpm_post_install
cmake/Modules/: CopyMSVCBins.cmake  FindFFmpeg.cmake  ObsCpack.cmake
cmake/osxbundle/: Info.plist
libobs/: CMakeLists.txt  obs-windows.c  obs.h
libobs-d3d11/: d3d11-stagesurf.cpp  d3d11-texture2d.cpp
plugins/: CMakeLists.txt
plugins/ftl-services/: CMakeLists.txt  ftl-beam.c
plugins/ftl-services/data/: package.json  services.json
plugins/libftl/: CMakeLists.txt
plugins/obs-outputs/: CMakeLists.txt  ftl-stream.c  obs-outputs.c
plugins/obs-x264/: obs-x264.c
